Fix the swiper-buuton-wrap, img-border

--- a/src/scss/components/onze-expertises.scss
+++ b/src/scss/components/onze-expertises.scss
@@ -27,7 +27,7 @@
     border-radius: 5px;
     opacity: 1;
     background: #ffffff;
-    width: 38px;
+    min-width: 38px;
     height: 38px;
     display: flex;
     align-items: center;
